# pg_replicate

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
pg_replicate/: Cargo.toml
pg_replicate/src/: table.rs
pg_replicate/src/clients/: postgres.rs
pg_replicate/src/pipeline/sinks/: mod.rs
src/conversions/: cdc_event.rs
src/pipeline/sinks/: mod.rs
