[package]
name = "pg_replicate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bigdecimal = { version = "0.4.6", features = ["std"] }
bytes = "1.0"
byteorder = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
duckdb = { version = "1.0", optional = true, features = ["bundled"] }
deltalake = { version = "0.22.0", features = ["datafusion"], optional = true }
futures = "0.3.31"
gcp-bigquery-client = { version = "0.25.0", optional = true, features = [
    "rust-tls",
    "aws-lc-rs",
] }
pg_escape = "0.1.1"
pin-project-lite = "0.2"
postgres-protocol = { git = "https://github.com/imor/rust-postgres", rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }
postgres-replication = { git = "https://github.com/imor/rust-postgres", rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }
prost = { version = "0.13.1", optional = true }
rustls = { version = "0.23.12", features = ["aws-lc-rs", "logging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { git = "https://github.com/imor/rust-postgres", features = [
    "runtime",
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
], rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }
tracing = { version = "0.1", default-features = true }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
clap = { version = "4.5", features = [
    "std",
    "derive",
] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
] }

[features]
bigquery = ["dep:gcp-bigquery-client", "dep:prost"]
duckdb = ["dep:duckdb"]
stdout = []
delta = ["dep:deltalake"]
# When enabled converts unknown types to bytes
unknown_types_to_bytes = []
default = ["unknown_types_to_bytes"]
